--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "graphql": "^16.6.0",
     "react": "^18.0.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
