--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
+    "@react-oauth/google": "^0.11.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,8 @@
     "react": "^18.0.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.0.0",
+    "react-facebook-login": "^4.1.1",
+    "react-github-login": "^1.0.3",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
